Fix white gaps in middle line.

--- a/src/App.scss
+++ b/src/App.scss
@@ -386,6 +386,15 @@ header {
     bottom: 23.5px;
   }
 
+  .center-line {
+    position: absolute;
+    top: 57px;
+    left: -4px;
+    height: 12px;
+    width: 570px;
+    background-color: black;
+  }
+
   .up-beads-container {
     height: 57px;
     width: 32px;
